style: fix z-index

--- a/frontend/src/app/components/channel/channel.component.scss
+++ b/frontend/src/app/components/channel/channel.component.scss
@@ -38,4 +38,5 @@ app-advertising {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 9999;
 }
